--- a/index.html
+++ b/index.html
@@ -20,55 +20,17 @@
   <!-- Clock -->
   <h2 id="clock">00:00</h2>
   <!-- //Clock -->
-
-  <!-- 명언 10개 준비 -->
-  <!-- 
-    삶이 있는 한 희망은 있다 -키케로
-    언제나 현재에 집중할수 있다면 행복할것이다. -파울로 코엘료
-    직업에서 행복을 찾아라. 아니면 행복이 무엇인지 절대 모를 것이다 -엘버트 허버드
-    신은 용기있는자를 결코 버리지 않는다 -켄러
-    행복의 문이 하나 닫히면 다른 문이 열린다 그러나 우리는 종종 닫힌 문을 멍하니 바라보다가 우리를 향해 열린 문을 보지 못하게 된다 – 헬렌켈러
-    단순하게 살아라. 현대인은 쓸데없는 절차와 일 때문에 얼마나 복잡한 삶을 살아가는가?-이드리스 샤흐
-    행복한 삶을 살기위해 필요한 것은 거의 없다. -마르쿠스 아우렐리우스 안토니우스
-    절대 어제를 후회하지 마라 . 인생은 오늘의 나 안에 있고 내일은 스스로 만드는 것이다 L.론허바드
-    어리석은 자는 멀리서 행복을 찾고, 현명한 자는 자신의 발치에서 행복을 키워간다 -제임스 오펜하임
-    한번의 실패와 영원한 실패를 혼동하지 마라 -F.스콧 핏제랄드
-    오랫동안 꿈을 그리는 사람은 마침내 그 꿈을 닮아 간다, -앙드레 말로
-    좋은 성과를 얻으려면 한 걸음 한 걸음이 힘차고 충실하지 않으면 안 된다, -단테
-    행복은 습관이다,그것을 몸에 지니라 -허버드
-    성공의 비결은 단 한 가지, 잘할 수 있는 일에 광적으로 집중하는 것이다.- 톰 모나건
-    평생 살 것처럼 꿈을 꾸어라.그리고 내일 죽을 것처럼 오늘을 살아라. – 제임스 딘
-    1퍼센트의 가능성, 그것이 나의 길이다. -나폴레옹
-    일하는 시간과 노는 시간을 뚜렷이 구분하라 . 시간의 중요성을 이해하고 매순간을 즐겁게 보내고 유용하게 활용하라. 그러면 젋은 날은 유쾌함으로 가득찰것이고 늙어서도 후회할 일이 적어질것이며 비록 가난할 때라도 인생을 아름답게 살아갈수있다 – 루이사 메이올콧
-    절대 포기하지 말라. 당신이 되고 싶은 무언가가 있다면, 그에 대해 자부심을 가져라. 당신 자신에게 기회를 주어라. 스스로가 형편없다고 생각하지 말라. 그래봐야 아무 것도 얻을 것이 없다. 목표를 높이 세워라.인생은 그렇게 살아야 한다. – 마이크 맥라렌
-    화려한 일을 추구하지 말라. 중요한 것은 스스로의 재능이며, 자신의 행동에 쏟아 붓는 사랑의 정도이다. -머더 테레사
-    마음만을 가지고 있어서는 안된다. 반드시 실천하여야 한다. -이소룡
-    흔히 사람들은 기회를 기다리고 있지만 기회는 기다리는 사람에게 잡히지 않는 법이다. 우리는 기회를 기다리는 사람이 되기 전에 기회를 얻을 수 있는 실력을 갖춰야 한다. 일에 더 열중하는 사람이 되어야한다. -안창호
-    만약 우리가 할 수 있는 일을 모두 한다면 우리들은 우리자신에 깜짝 놀랄 것이다. -에디슨
-    진짜 문제는 사람들의 마음이다. 그것은 절대로 물리학이나 윤리학의 문제가 아니다. -아인슈타인
-    해야 할 것을 하라. 모든 것은 타인의 행복을 위해서, 동시에 특히 나의 행복을 위해서이다. -톨스토이
-    사람이 여행을 하는 것은 도착하기 위해서가 아니라 여행하기 위해서이다. -괴테
-    돈이란 바닷물과도 같다. 그것은 마시면 마실수록 목이 말라진다. -쇼펜하우어
-    고개 숙이지 마십시오. 세상을 똑바로 정면으로 바라보십시오. -헬렌 켈러
-    성공해서 만족하는 것은 아니다. 만족하고 있었기 때문에 성공한 것이다.-알랭
-    당신이 할수 있다고 믿든 할수 없다고 믿든 믿는 대로 될것이다.- 헨리 포드
-    당신이 인생의 주인공이기 때문이다 . 그사실을 잊지마라 . 지금까지 당신이 만들어온 의식적 그리고 무의식적 선택으로 인해 지금의 당신이 있는것이다 . – 바바라 홀
-    최고에 도달하려면 최저에서 시작하라. -P.시루스
-    겨울이 오면 봄이 멀지 않으리 -셸리
-    도중에 포기하지 말라. 망설이지 말라. 최후의 성공을 거둘 때까지 밀고 나가자. – 헨리포드
-    네 자신의 불행을 생각하지 않게 되는 가장 좋은 방법은 일에 몰두하는 것이다. -베토벤
-    내가 헛되이 보낸 오늘은 어제 죽어간 이들이 그토록 바라던 하루이다 단 하루면 인간적인 모든 것을 멸망시킬수도 다시 소생시킬수도 있다. -소포클레스
-    실패는 잊어라 그러나 그것이 준 교훈은 절대 잊으면 안된다. -하버트 개서
-    삶을 사는 데는 단 두가지 방법이 있다. 하나는 기적이 전혀 없다고 여기는 것이고 또 다른 하나는 모든 것이 기적이라고 여기는방식이다. – 알베르트 아인슈타인
-    내 비밀은 이런 거야. 매운 간단한 거지. 오로지 마음으로 보아야만 정호가하게 볼 수 있어 가장 중요한 것은 눈에는 보이지 않는 법이야 - 어린왕자
-    네 장미꽃을 그렇게 소중하게 만든 것은, 그 꽃을 위해 네가 소비한 시간이란다. - 어린왕자
-    나를 길들여줘 가령 오후 4시에 네가 온다며 나는 3시부터 행복해지기 시작할거야 그러나 만일, 네가 무턱대고 아무때나 찾아오면 난 언제부터 마음의 준비를 해야할지 모르니까 - 어린왕자
-    다른 사람에게는 결코 열어주지 않는 문을 당신에게만 열어주는 사람이 있다면 그사람이야 말로 당신의 진정한 친구이다. - 어린왕자
-  -->
+  <!-- Quotes -->
+  <div id="quotes">
+    <span></span>
+    <span></span>
+  </div>
+  <!-- //Quotes -->
 
   <!-- Script -->
   <script src="./js/greetings.js"></script>
   <script src="./js/clock.js"></script>
+  <script src="./js/quotes.js"></script>
   <!-- //Script -->
 </body>
 </html>
