--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script src="./js/greetings.js"></script>
   <script src="./js/clock.js"></script>
   <script src="./js/quotes.js"></script>
+  <script src="./js/background.js"></script>
   <!-- //Script -->
 </body>
 </html>
