#7 To DO LIST - #7.2 Deleting To Dos / Complete

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   <!-- Clock -->
   <h2 id="clock">00:00</h2>
   <!-- //Clock -->
+  <!-- todo-list -->
+  <form action="" id="todo-form">
+    <input type="text" placeholder="Write a To Do and press Enter" required />
+  </form>
+  <ul id="todo-list"></ul>
+  <!-- //todo-list -->
   <!-- Quotes -->
   <div id="quotes">
     <span></span>
@@ -32,6 +38,7 @@
   <script src="./js/clock.js"></script>
   <script src="./js/quotes.js"></script>
   <script src="./js/background.js"></script>
+  <script src="./js/todo.js"></script>
   <!-- //Script -->
 </body>
 </html>
