#8 WEATHER - #8.2 Conclusions / Complete

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8">
+  <meta name="Referrer" content="origin">
+  <meta http-equiv="Content-Script-Type" content="text/javascript">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="ImageToolbar" content="no" />
+  <meta http-equiv="Expires" content="-1">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="No-Cache">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover">
   <link rel="stylesheet" href="./css/style.css" />
   <title>Momentum App</title>
 </head>
@@ -32,13 +39,19 @@
     <span></span>
   </div>
   <!-- //Quotes -->
-
+  <!-- Weather -->
+  <div id="weather">
+    <span></span>
+    <span></span>
+  </div>
+  <!-- //Weather -->
   <!-- Script -->
   <script src="./js/greetings.js"></script>
   <script src="./js/clock.js"></script>
   <script src="./js/quotes.js"></script>
   <script src="./js/background.js"></script>
   <script src="./js/todo.js"></script>
+  <script src="./js/weather.js"></script>
   <!-- //Script -->
 </body>
 </html>
