feat: gulp setting add

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
   <!-- //Weather -->
   <!-- Quotes -->
   <div id="quotes">
-    <span></span>
-    <span></span>
+    <span></span> / <span></span>
   </div>
   <!-- //Quotes -->
   <!-- //Weather -->
   <!-- Script -->
+  <script src="./js/api_key.js"></script>
   <script src="./js/greetings.js"></script>
   <script src="./js/clock.js"></script>
   <script src="./js/quotes.js"></script>
