--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- //Quotes -->
   <!-- //Weather -->
   <!-- Script -->
-  <script src="./js/api_key.js"></script>
+  <!-- <script src="./js/api_key.js"></script> -->
   <script src="./js/greetings.js"></script>
   <script src="./js/clock.js"></script>
   <script src="./js/quotes.js"></script>
